2007-06-21  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: install default netconfig as strnsl
	* doc/manual/bugs.texi: doc updates for release
	* doc/manual/strnsl.texi: doc updates for release
	* doc/manual/todo.texi: doc updates for release
	* src/util/sysconfig/netconfig: make same as libtirpc

2007-06-20  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: new distro/kernel support
	* doc/manual/prerequisites.texi: new distro/kernel support
	* strnsl.spec.in: recognize Fedora 7 kernels
	* strnsl.lsm.in: update file sizes for release

2007-06-16  Brian Bidulock  <bidulock@openss7.org>

	* configure.nexusware: remove any later language
	* debian/mscript_postinst.in: remove any later language
	* debian/mscript_postrm.in: remove any later language
	* debian/mscript_preinst.in: remove any later language
	* debian/mscript_prerm.in: remove any later language
	* debian/strnsl-doc.preinst.in: remove any later language
	* debian/strnsl-doc.prerm.in: remove any later language
	* debian/strnsl-init.postinst.in: remove any later language
	* debian/strnsl-init.postrm.in: remove any later language
	* debian/strnsl-init.preinst.in: remove any later language
	* debian/strnsl-init.prerm.in: remove any later language
	* debian/strnsl-lib.preinst.in: remove any later language
	* debian/strnsl-source.preinst.in: remove any later language
	* debian/strnsl-util.preinst.in: remove any later language
	* tests/dummy1.m4: remove any later language
	* tests/dummy2.m4: remove any later language
	* tests/dummy3.m4: remove any later language
	* tests/dummy4.m4: remove any later language

2007-05-18  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release

	* debian/strnsl-core.preinst.in: corrected array subscript syntax error
	* debian/strnsl-core.prerm.in: corrected array subscript syntax error